fix: 불변 콜렉션을 복사하여 생성하도록 수정